@@ -1298,7 +1298,9 @@ module = {
   name = chain;
   efi = loader/efi/chainloader.c;
   i386_pc = loader/i386/pc/chainloader.c;
+  i386_coreboot = loader/i386/corepayload.c;
   enable = i386_pc;
+  enable = i386_coreboot;
   enable = efi;
 };
 
